--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html,
 body {
     margin: 0;
     padding: 0;
+    /*width:100%;*/
+    height: auto;
     background-color: pink;
 }
 
